--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -60,6 +60,9 @@
 
     </div>
 
+    <section id="sidebar">
+      <iframe width="225" height="570" src="http://meetu.ps/2ZdX6C" frameborder="0"></iframe>
+    </section>
     
   </body>
 </html>
