--- a/stylesheets/non-screen.css
+++ b/stylesheets/non-screen.css
@@ -152,3 +152,7 @@ hr {
   height: 42px;
   background: transparent url('../images/hr-2x.jpg') center center repeat-x;
 }
+
+#sidebar {
+  text-align: center;
+}
