--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -1,3 +1,20 @@
 @import url("screen.css");
 @import url("non-screen.css") handheld;
 @import url("non-screen.css") only screen and (max-device-width:640px);
+
+/* For FUOC Reasons */
+.event {
+	display: none;
+}
+
+#event-when, #event-place {
+	text-align: center;
+}
+
+.sponsor {
+	text-align: center;
+}
+.sponsor img{
+	box-shadow: none;
+	border: none;
+}
