--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -358,7 +358,7 @@ footer span.octocat {
   display: block;
   width: 30px;
   height: 30px;
-  margin: 0 auto;
+  margin: 20px auto 0;
 }
 
 /* content */
